# kisa747.github.io

./: .autocorrectrc  .gitattributes  .gitignore  .markdownlint.yml  .readthedocs.yaml  404.html  CNAME  README.md  git_sync.cmd  index.html  mkdocs.yml  mkdocs_serve.cmd  pyproject.toml  requirements.txt  serve.cmd  sitemap.xml  zensical.toml  语法修复.lnk  语法修复.sh
2013/: zhui-yi-si-shui-liu-nian.html
2014/: fix-pdfcreatorv1-7-2.html
Excel/: ASCII码详解.html  Excel去除换行符的方法.html  Excel学习笔记.html  Excel笔记.html  PowerQuery笔记.html  VBA内置函数.html  VBA基础知识.html  VBA正则表达式.html  VBA消息框输入框.html  VBA笔记.html  创建序列.html  引用图片.html  数据透视表.html  条件筛选.html
Linux/: Android开发.html  Cockpit.html  DebianCasaOS.html  DebianNAS.html  Debian笔记.html  Docker笔记.html  Fedora笔记.html  GRUB、UEFI笔记.html  LinuxMint笔记.html  OMV.html  OpenWrt笔记.html  PE系统维护.html  RaspberryPi笔记.html  SSH配置.html  Samba笔记.html  Shell命令.html  Shell笔记.html  vi编辑器笔记.html  群晖笔记.html
Python/: Git笔记.html  HTTP请求.html  Python管理-UV.html  Python管理-pip.html  Python管理-升级Python.html  字符编码.html  常用配置文件格式指南.html  异步IO.html  正则表达式-cn.html  正则表达式-re模块.html  正则表达式-学习.html  装饰器.html  计算日出日落时间.html
Windows/: 01-常用命令.html  Aria2下载工具.html  AutoHotkey.html  Bitlocker笔记.html  Chrome浏览器.html  Foobar2000笔记.html  KMS激活.html  MPV使用指南.html  Markdown笔记.html  Office2021配置.html  Office2024配置.html  PDF文档.html  Typora笔记.html  WPS笔记.html  Windows10安装指南.html  WindowsPE笔记.html  Windows包管理.html  Windows常用命令.html  Windows搭建ntp服务器.html  Windows笔记.html  qBitorentEE.html  syncthing.html  中文输入法.html  备份策略.html  安装照片应用.html  管理Windows更新策略.html  网络.html  软件笔记.html
(+2030 files in other folders)
