[project]
name = "kevin_wiki"
version = "0.1.0"
description = "我个人的知识库"
readme = "README.md"
authors = [{ name = "kevin", email = "kevin@kisa747.top" }]
requires-python = ">=3.13"
dependencies = ["mkdocs", "mkdocs-material"]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
